<resources>
    <string name="app_name">Daily Emoji</string>
    <string name="title_activity_emoji_note">EmojiNoteActivity</string>
    <string name="graph_button">Show graph</string>
    <string name="self_rate_button">Self Rate</string>
    <string name="bar_instruction">From 1 to 10, how do you feel right now?</string>
    <string name="history_button">History</string>
    <string name="happiness">Happiness</string>
    <string name="emoji">Emoji</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="row_id">row_id</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example settings for Data & Sync -->
    <string name="pref_title_notifications_frequency">Notifications frequency</string>
    <string-array name="pref_notifications_frequency_titles">
        <item>30 seconds</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="pref_notifications_frequency_values">
        <item>0.5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="clear_all">Clear all</string>
    <string name="add_random_data">Add random data</string>
    <string name="note_hint">Enter extra note here</string>
    <string name="all_done_button">Enter extra note here</string>
    <string name="settings">Settings</string>
</resources>
