<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dailyemoji.dailyemoji.HistoryActivity"
    android:id="@+id/activity_history">


    <!-- Header -->
    <LinearLayout android:id="@+id/header"
        android:layout_height="wrap_content"
        android:layout_width="2400dp">

        <TextView
            android:id="@+id/item1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:width="20dip"
            android:height="30dip" />

        <TextView android:id="@+id/item2"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:text="@string/happiness"
            android:width="70dip"
            android:height="30dip"
            />

        <TextView android:id="@+id/item3"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:text="@string/emoji"
            android:width="50dip"
            android:height="30dip"
            />

        <TextView
            android:id="@+id/item4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:width="100dip"
            android:height="30dip"
            android:text="@string/note" />

        <TextView
            android:id="@+id/item5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:width="100dip"
            android:height="30dip"
            android:text="@string/date" />
    </LinearLayout>

    <!-- List Divider -->
    <View android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <!-- ListView (grid_items) -->
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal">

    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
        android:id="@+id/clearAllButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clearAll"
        android:text="@string/clear_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982"
        app:layout_constraintHorizontal_bias="0.032" />

    <Button
        android:id="@+id/addRandomDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="addRandomData"
        android:text="@string/add_random_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982"
        app:layout_constraintHorizontal_bias="0.958" />

</android.support.constraint.ConstraintLayout>
